--- a/css/style.css
+++ b/css/style.css
@@ -2,127 +2,107 @@
     margin: 0;
     box-sizing: border-box;
 }
-.c-hamburger{
-    display: block;
+header{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+   
+}
+.slidebar{
+    position: fixed;
+    width: 200px;
+    height: 100%;
+    left: -200px;
+    transition: all ease-in .6s;
+}
+
+ .active{
+    left: 0px;
+}
+
+.slidebar ul li{
+    color: #000;
+    list-style: none;
+    padding: 5px;
+}
+.toggle-btn{
     position: absolute;
-    right: 0;
-    top: 0;
-    margin-left: 0;
-    padding: 0;
-    width: 50px;
-    height: 40px;
-    font-size: 0;
-    overflow: hidden;
-    box-shadow: none;
+    left: 230px;
+    top: 5px;
     cursor: pointer;
 }
-
-.c-hamburger:focus{
-    outline: none;
-}
-
-.c-hamburger span{
+.toggle-btn span{
     display: block;
-    position: absolute;
-    top: 14px;
-    left: 14px;
-    right: 10px;
-    height: 5px;
-    background: #000;
-
+    width: 25px;
+    height: 2px;
+    background-color: #000;
+    margin: 3px 0;
 }
 
-
-.c-hamburger span::after, .c-hamburger span::before{
-    display: block;
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 5px;
-    background: #000;
-    content: "";
-}
-
-.c-hamburger span::before{
-    top: -10px;
-}
-
-.c-hamburger span::after{
-    bottom: -10px;
-}
-
-.c-hamburger{
-    background: transparent;
-}
-
-.han-line {
-    background: transparent;
-}
-
-.han-line span{
-    transition: background 0s 0.3s;
-}
-.c-hamburger span::after, .c-hamburger span::before{
-    transition-duration: 0.3s, 0.3s;
-    transition-delay: 0.3s 0s;
-}
-
-.c-hamburger span::before{
-    transition-property:top, transform ;
-}
-
-.c-hamburger span::after{
-    transition-property: bottom, transform ;
-}
-
-
-.c-hamburger.is-active span{
-    background: none;
-}
-
-.c-hamburger.is-active span::after{
-    top: 0;
-    transform: rotate(45deg);
-}
-.c-hamburger.is-active span::before{
-    top: 0;
-    transform: rotate(-45deg);
-} 
-
-.c-hamburger.is-active span::after, .c-hamburger.is-active span::before{
-    transition-delay: 0s, .3s;
-}
-
-.menu{
-    width: 290px;
-    margin-left: -240px;
-    
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    transition: all ease-in 1s;
-    z-index: 999;
-}
-.body-active{
-    margin-left: 300px;
-}
-.menu.nav-active{
-    margin-left: 0;
-}
-header{
-    margin-top: 10px;
-}
 .head_cont{
     display: flex;
     align-items: center;
     justify-content: space-between;
  
 }
-
-
-.ge{
+/* .ge{
     display: flex;
     align-items: center;
     justify-content: center;
+} */
+
+.inputT input{
+    width: 500px;
+    padding: 0px 20px;
+    border-radius: 40px;
+    height: 25px;
+    border: solid 1px #222;
+}
+.inputT  button{
+    position: absolute;
+    margin-left: -20px;
+    width: 50px;
+    height: 25px;
+    border-radius: 0px 20px 20px 0px;
+    border: solid 1px;
+}
+.inputT  button img{
+    width: 20px;
+    cursor: pointer;
+}
+.iconteam{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.iconteam img {
+    width: 30px;
+    
+}
+/* modal style */
+.myModal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0, 0.1);
+}
+.modalContent{
+    background-color: #fefefe;
+    margin: 50px auto;
+    padding: 200px;
+    width: 40%;
+    border-radius: 20px;
+}
+.close{
+    color: #aaa;
+    float: right;
+    font-size: 20px;
+    font-size: 28px;
+    font-size: bold;
+    
 }
