--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 header{
     display: flex;
     justify-content: space-around;
-    margin-top: 20px;
+    margin-top: 10px;
    
 }
 .slidebar{
@@ -14,6 +14,7 @@ header{
     height: 100%;
     left: -200px;
     transition: all ease-in .6s;
+    background: rgb(0, 0, 0, .1);
 }
 
  .active{
@@ -27,7 +28,7 @@ header{
 }
 .toggle-btn{
     position: absolute;
-    left: 230px;
+    left: 210px;
     top: 5px;
     cursor: pointer;
 }
@@ -147,12 +148,87 @@ header{
     padding: 0 15%;
 }
 
-.folowers h1 svg{
-    width: 40px;
+.folowers{
+    margin-left: 20px;
+}
+.folowers div{
+    border-bottom: solid 1px;
+    width: 180px;
+    margin-left: -10px;
+    margin-top: 10px;
+}
+.folowers  svg{
+    width: 30px;
+    margin-right: 10px;
 }
 
-.folowers h1 {
+.folowers a {
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
+    margin-top: 20px;
+    font-weight: 200;
+    cursor: pointer;
+    color: #222;
+    text-decoration: none;
+}
+.folowers a:hover{
+    background: #c7c6c6;
+    border-radius: 15px;
+}
+
+/* libriry */
+.libriry{
+    margin-left: 20px;
+}
+.libriry svg{
+    width: 30px;
+    margin-right: 10px;
+}
+.libriry div{
+    border-bottom: solid 1px;
+    width: 180px;
+    margin-left: -10px;
+    margin-top: 10px;
+}
+.libriry a{
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    font-weight: 200;
+    cursor: pointer;
+    color: #222;
+    text-decoration: none;
+}
+.libriry a:hover{
+    background: #c7c6c6;
+    border-radius: 15px;
+}
+/* navigation */
+.navigation{
+    margin-left: 20px;
+}
+   
+.navigation svg{
+    width: 30px;
+    margin-right: 10px;
+}
+.navigation div{
+    border-bottom: solid 1px;
+    width: 180px;
+    margin-left: -10px;
+    margin-top: 10px;
+}
+.navigation a{
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    font-weight: 200;
+    cursor: pointer;
+    color: #222;
+    text-decoration: none;
+}
+.navigation a:hover{
+    background: #c7c6c6;
+    border-radius: 15px;
 }
